Version 5.1.2.3
Added set-port-next-location! and changed the default prompt 
 read handler to use it when input and output ar terminals

Version 5.1.2.2
Changed the location-creation semantics of internal definitions
 and `letrec-syntaxes+values'
Added unsafe-list-ref and unsafe-list-tail

Version 5.1.2, August 2011
Replaced syntax certificates with syntax taints:
 Added syntax-tainted?, syntax-arm, syntax-disarm, syntax-rearm,
  syntax-taint, and syntax-protect
 Changed syntax-recertify and syntax-local-certifier to
  have no effect on the target syntax object
 Changed syntax-rules and syntax-id-rules to use
  syntax-protect implicitly
 Changed the way inspectors are associated to syntax objects
  and variable references in compiled code
Changed "sequence" to include exact nonnegative integers
Added #:unless clause to for
Changed procedure-arity-includes? to report #f for keyword-requiring
 procedures by default
mzlib/contract: removed (undocumented) exports:
  chaperone-contract-struct?
  contract-struct-first-order
  contract-struct-name
  contract-struct-projection
  contract-struct-stronger?
  contract-struct?
  flat-contract-struct?
  make-opt-contract/info
  opt-contract/info-contract
  opt-contract/info-enforcer
  opt-contract/info-id
  synthesized-value
  unknown?
Changed assoc to accept an optional equality predicate
racket/function: added identity, thunk, thunk*, compose1
racket/require: added multi-in
slideshow/pict: added rotate function, and added sxy anf syx
 fields to a child structure
compiler/zo-struct: removed certificate structures; changed
 wrapper to have a tamper-status field instead of certs;
 added toplevel-map field to lam

Version 5.1.1, May 2011
Enabled single-precision floats by default
Added single-flonum?
Changed eqv? so that inexacts are equivalent only when they
 have the same precision
Changed file-or-directory-permission to add 'bits mode
 and permission-setting mode
Added special treatment of void as an 'inferred-name property