@@ -7,9 +7,6 @@ A frame is a top-level container window. It has a title bar (which
  displays the frame's label), an optional menu bar, and an optional
  status line.
 
-On Windows, both Multiple Document Interface (MDI) and Single
- Document Interface (SDI) frames are supported.
-
 @defconstructor[([label label-string?]
                  [parent (or/c (is-a?/c frame%) false/c) #f]
                  [width (or/c (integer-in 0 10000) false/c) #f]
@@ -18,7 +15,6 @@ On Windows, both Multiple Document Interface (MDI) and Single
                  [y (or/c (integer-in -10000 10000) false/c) #f]
                  [style (listof (one-of/c 'no-resize-border 'no-caption 
                                           'no-system-menu 'hide-menu-bar 
-                                          'mdi-parent 'mdi-child
                                           'toolbar-button 'float 'metal)) null]
                  [enabled any/c #t]
                  [border (integer-in 0 1000) 0]
@@ -37,9 +33,8 @@ set-label]), the title bar is updated.
 
 The @racket[parent] argument can be @racket[#f] or an existing
 frame. On Windows, if @racket[parent] is an existing frame,
-the new frame is always on top of its parent. Also, the
-@racket[parent] frame may be an MDI parent frame from a new MDI
-child frame. On Windows and Unix (for many window managers), a
+the new frame is always on top of its parent.
+On Windows and Unix (for many window managers), a
 frame is iconized when its parent is iconized.
 
 If @racket[parent] is @racket[#f], then the eventspace for the
@@ -72,14 +67,6 @@ some platforms:
  @item{@racket['no-system-menu] --- omits the system menu
  (Windows)}
 
- @item{@racket['mdi-child] --- creates the frame as a MDI
- (multiple document interface) child frame, mutually exclusive with
- @racket['mdi-parent] (Windows)}
-
- @item{@racket['mdi-parent] --- creates the frame as a MDI
- (multiple document interface) parent frame, mutually exclusive with
- @racket['mdi-child] (Windows)}
-
  @item{@racket['toolbar-button] --- includes a toolbar button on the
  frame's title bar (Mac OS X); a click on the toolbar button triggers
  a call to @method[frame% on-toolbar-button-click]}
@@ -98,9 +85,6 @@ some platforms:
  @item{@racket['metal] --- ignored (formerly supported for Mac OS X)}
 
 ]
-
-If the @racket['mdi-child] style is specified, the @racket[parent] must be
- a frame with the @racket['mdi-parent] style, otherwise @|MismatchExn|.
 
 Even if the frame is not shown, a few notification events may be
  queued for the frame on creation. Consequently, the new frame's
@@ -196,22 +180,6 @@ Gets or sets the frame's modification state as reflected to the user.
  On Mac OS X, the modification state is reflected as a dot in the
  frame's close button. On Windows and Unix, the modification state is
  reflected by an asterisk at the end of the frame's displayed title.
-
-}
-
-@defmethod[(on-mdi-activate [active? any/c])
-           void?]{
-
-Called on Windows when a MDI-child frame becomes the active frame
- within its parent (in which case the argument is @racket[#t]), or when
- the child frame ceases to be the active frame (in which case the
- argument is @racket[#f]).
-
-
-MDI activation is different from keyboard-focus activation. If the
- parent frame is the frontmost top-level frame, so that the MDI child
- gets or loses the keyboard focus, then a separate
-@method[top-level-window<%> on-activate] notification is sent to the MDI-child frame.
 
 }
 
